--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -34,7 +34,7 @@ header {
       align-items: center;
       justify-content: center;
       height: 100%;
-      padding: 0 20px;
+      padding: 0 1em;
       gap: 10px;
       z-index: 5;
       top: 0;
@@ -125,26 +125,32 @@ header {
   .cartIcon {
     position: absolute;
     right: 0;
-    padding: 1em;
-
-    @include m.desktop {
-      padding: 2em;
-    }
-    i {
-      font-size: 1.4em;
-      color: v.$landingpage-text-color;
-    }
+    padding: 0 1em;
     &:hover {
       cursor: pointer;
     }
-
-    #cartCount {
-      color: #fff;
-      font-size: 10px;
-      font-weight: 600;
+    @include m.desktop {
+      padding: 0 2em;
+    }
+    >div {
       position: relative;
-      right: 21px;
-      bottom: 3px;
+      i {
+        font-size: 1.4em;
+        color: v.$landingpage-text-color;
+      }
+      #cartCount {
+        color: #fff;
+        width: 100%;
+        height: 100%;
+        top: 2px;
+        left: 0;
+        font-size: 10px;
+        font-weight: 600;
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
     }
   }
 }
